tests/array/bad/omit_empty.catala_en
## Article

```catala
declaration structure S:
  data id content integer
  data income content money

declaration scope A:
   context output x content list of S
   context output y content list of S

scope A:
   definition x equals [
      S { -- id: 0 -- income: $0 };
      S { -- id: 1 -- income: $4 + $5 };
      S { -- id: 2 -- income: $8 * 0.65 }
   ]
   definition y equals []

declaration scope B:
   a scope A
   output argmax content S
   output max content money
#   output min content money
   output argmin content S

scope B:
   definition argmax equals
     (content of m among a.x such that m.income * 2.0 is maximum)
   definition max equals maximum of m.income for m among a.x
   # definition min equals minimum of m.income for m among a.y
   definition argmin equals
     (content of m among a.y such that m.income + $5 is minimum)
```


```catala-test-inline
$ catala test-scope B
┌─[ERROR]─
│
│  During evaluation: the list was empty.
│
├─➤ tests/array/bad/omit_empty.catala_en:33.7-33.14:
│    │
│ 33 │      (content of m among a.y such that m.income + $5 is minimum)
│    │       ‾‾‾‾‾‾‾
└─ Article
#return code 123#
```
